# testCMake

./: CMakeLists.txt  README.md
src/: vector_add.cu
